# esp-ml

./: .clangd  CMakeLists.txt  CONTRIBUTING.md  README.md
assets/drawio/: esp_ml_model_usage.drawio
desktop-examples/: iris.c
desktop-examples/common/include/: csv_utils.h  matrix_utils.h
desktop-examples/common/src/: csv_utils.c
examples/components/common/: CMakeLists.txt
examples/components/common/include/: matrix_utils.h  webpage.h
examples/components/common/src/: matrix_utils.c  webpage.c
examples/components/esp-ml/: CMakeLists.txt
examples/matrix_operations/: CMakeLists.txt  partitions.csv
examples/matrix_operations/main/: CMakeLists.txt  main.c
examples/matrix_operations/spiffs_image/: index.html  index.html~
include/: ml_alloc.h  ml_defs.h  ml_error.h  ml_models.h  ml_operators.h  ml_primitives.h  ml_rng.h
src/: ml_alloc.c~  ml_models.c  ml_operators.c  ml_primitives.c  ml_rng.c
